--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "aiofiles>=24.1.0",
+    "aiohttp>=3.12.7",
     "anthropic>=0.52.1",
     "gradio>=5.32.0",
     "jinja2>=3.1.6",
