--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "aiohttp>=3.12.7",
     "anthropic>=0.52.1",
     "gradio>=5.32.0",
+    "gradio-pdf>=0.0.22",
     "jinja2>=3.1.6",
     "langchain>=0.3.25",
     "langgraph>=0.4.7",
