--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,9 @@ dependencies = [
     "markdown>=3.8",
     "mistralai>=1.8.1",
     "openai>=1.82.1",
+    "pdf2image>=1.17.0",
     "pydantic>=2.11.5",
+    "pymupdf>=1.26.0",
     "python-dotenv>=1.1.0",
     "python-multipart>=0.0.20",
     "requests>=2.32.3",
