--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "anthropic>=0.52.1",
     "gradio>=5.32.0",
     "gradio-pdf>=0.0.22",
+    "huggingface-hub>=0.32.3",
     "jinja2>=3.1.6",
     "langchain>=0.3.25",
     "langgraph>=0.4.7",
