--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "aiofiles>=24.1.0",
     "aiohttp>=3.12.7",
     "anthropic>=0.52.1",
+    "bs4>=0.0.2",
     "gradio>=5.32.0",
     "gradio-pdf>=0.0.22",
     "huggingface-hub>=0.32.3",
@@ -18,10 +19,12 @@ dependencies = [
     "mistralai>=1.8.1",
     "openai>=1.82.1",
     "pdf2image>=1.17.0",
+    "playwright>=1.53.0",
     "pydantic>=2.11.5",
     "pymupdf>=1.26.0",
     "python-dotenv>=1.1.0",
     "python-multipart>=0.0.20",
+    "python-pptx>=1.0.2",
     "requests>=2.32.3",
     "sqlalchemy>=2.0.41",
 ]
